introduction.css
/* ... */
@media (max-width: 650px) {
  .education ul {
    --row-gap: 2rem;
  }
}
@media (min-width: 40rem) {
  .education ul {
    grid-template-columns: 1fr var(--line-w) 1fr;
  }
  .education ul::before {
    grid-column: 2;
  }
  .education ul li:nth-child(odd) {
    grid-column: 1;
  }
  .education ul li:nth-child(even) {
    grid-column: 3;
  }

  /* start second card */
  .education ul li:nth-child(2) {
    grid-row: 2/4;
  }

  .education ul li:nth-child(odd) .date::after {
    transform: translate(-50%, -50%);
    left: calc(100% + var(--col-gap) + var(--line-w) / 2);
  }
  .education ul li:nth-child(odd) .date {
    border-radius: calc(var(--dateH) / 2);
  }
}

.education .credits {
  margin-top: 1rem;
  text-align: right;
}
.education .credits a {
  color: var(--color);
}

/* <-----------------My Work Section---------------------> */
.my-work {
  background-color: #e3f6f5;
  height: auto;
  width: 100vw;
}

.projects {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 40px 0;
  padding: 0 50px 0 50px;
}

.project {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 20px;
  align-items: center;
  margin-top: 2rem;
  margin-bottom: 5rem;
  text-align: left;
  width: auto;
}

.project p {
  color: #2d334a;
  border-radius: 20px;
  padding: 25px;
  background-color: #fffffe;
  border: #2d334a solid 1px;
}

.project h2 {
  margin-bottom: 5px;
  font-weight: 600;
  text-align: center;
  color: #272343;
  font-size: 2.5rem;
  font-weight: 800;
}
.project-image img {
  max-width: 100%;
  height: auto;
  border-radius: 20px;
  border: #2d334a 2px solid;
}

.project-image img:hover {
  box-shadow: 0px 3px 3px gold;
  transition: 0.8s;
  transform: scale(1.03);
}

.project-details {
  flex: 1;
  padding: 0 20px;
  text-align: left;
}

.programming-languages {
  list-style: none;
  padding: 0;
  margin: 10px;
  display: flex;
  align-items: center;
}

.programming-languages li {
  margin-right: 10px;
}

.programming-languages img {
  width: 2.5vw;
  height: auto;
}

.project-buttons {
  margin-top: 15px;
}

.button {
  display: inline-block;
  margin-right: 10px;
  padding: 10px 20px;
  background-color: #ffc107;
  color: #fffffe;
  text-decoration: none;
  border-radius: 5px;
}

/* Style the buttons as needed */
.button:hover {
  background-color: #0056b3;
}

.center-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.center-button {
  margin-bottom: 50px;
  width: auto;
  height: auto;
  padding: 1.5vh;
  background-color: #61a0ff;
  color: #fff;
  border: 1px solid white;
  outline: 3px solid #61a0ff;
  border-radius: 20px;
  cursor: pointer;
  font-size: 2.3vh;
  transition: background-color 0.3s, transform 0.2s;
}

.center-button:hover {
  background-color: #0056b3;
  transform: scale(1.05);
  outline: 5px solid #0056b3;
}

@media (max-width: 768px) {
  .my-work {
    height: auto;
  }
}

/* Skill section */
.skill {
  background-color: #fffffe;
  min-height: 100vh;
  padding-top: 50px;
  padding-bottom: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.technical-skill {
  display: grid;
  grid-template-columns: 1fr 2fr;
  gap: 30px;
  width: auto;
  align-items: center;
  justify-content: center;
  position: relative;
  margin: 50px 0 50px 0;
  padding: 0 50px 0 50px;
}

.technical-skill-image {
  max-width: 100%;
  height: auto;
  border-radius: 20px;
  border: #2d334a 2px solid;
}

.building-computer {
  padding: 10px;
}

.skill-section {
  width: 100vw;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 50px;
  align-items: center;
  justify-content: space-around;
  margin: 0 auto;
  padding-left: 50px;
  padding-right: 50px;
  margin-bottom: 50px;
}

.programming-language-card {
  border-radius: 10px;
  max-width: 100%;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
  background-color: #fff;
  text-align: center;
  transition: transform 0.5s ease-in-out, box-shadow 0.3s ease-in-out;
}

.programming-language-card:nth-child(2) {
  transition-delay: 400ms;
  transition: 1.4s;
}

.programming-language-card:nth-child(3) {
  transition-delay: 600ms;
  transition: 1.7s;
}

.programming-language-card:hover {
  transform: scale(1.1);
  box-shadow: 0px 8px 8px #6ea6f3;
}

.programming-language-card:hover {
  transform: translateX(2);
}

.skill-title {
  border-radius: 10px 10px 0 0;
  font-size: 20px;
  background-color: #6ea6f3;
  color: white;
  padding: 10px;
}

.skill-title h2 {
  margin: 0;
}
.programming-language-list {
  padding: 0;
}

.programming-language-item {
  margin: 5px 0;
  font-size: 2.2vmin;
}

/* Contact section */
.contact-section {
  height: 100vh;
  align-items: center;
  justify-content: space-between;
  padding: 2rem;
  display: grid;
  grid-template-columns: 5fr 1fr;
  gap: 30px;
  width: 100vw;
  background-color: #f5f9ff;
  position: relative;
}

.contact-text h2 {
  font-weight: 1000;
  font-size: 3rem;
}

.contact-social-icons {
  opacity: 0.8;
  padding-top: 30px;
  font-size: 32px;
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.contact-social-icons a {
  font-size: 4.5vh !important;
}

.contact-social-icons i {
  height: 3vh;
  margin-bottom: 15px;
  transition: 0.5s;
  color: black;
}

.contact-social-icons i:hover {
  transform: scale(1.3);
  opacity: 1;
  color: #6ea6f3;
}

.contact-form {
  display: grid;
  margin-top: 2.55rem;
  grid-template-columns: repeat(2, 1fr);
  column-gap: 2rem;
  row-gap: 1rem;
}

.input-wrap {
  position: relative;
}

.input-wrap.w-100 {
  grid-column: span 2;
}

.contact-input {
  width: 100%;
  background-color: white;
  padding: 1.5rem 1.35rem calc(0.75rem - 2px) 1.35rem;
  outline: none;
  border-radius: 30px;
  color: var(--text-color);
  font-weight: 600;
  font-size: 0.95rem;
  transition: 0.3s;
  border: 2px solid black;
  box-shadow: 0 0 0 0px;
}
/* ... */

